--- a/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
+++ b/SAM_UI/SAM.Geometry.UI/SAM.Geometry.UI.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Classes\Appearance\SurfaceAppearance.cs" />
     <Compile Include="Classes\Appearance\PointAppearance.cs" />
     <Compile Include="Classes\Camera.cs" />
+    <Compile Include="Classes\Mesh3DObject.cs" />
     <Compile Include="Classes\Modification\ViewSettingsModification.cs" />
     <Compile Include="Classes\Settings\ParameterAppearanceSettings.cs" />
     <Compile Include="Classes\Text3DObject.cs" />
