--- a/Application/SAM Analytical/SAM Analytical.csproj
+++ b/Application/SAM Analytical/SAM Analytical.csproj
@@ -4,14 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{141D9925-A6E1-4390-89C7-251A428E2DF0}</ProjectGuid>
+    <ProjectGuid>{E83588A3-BAAD-4B4F-B978-FEFCFF8C34C2}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>SAM.Analytical.UI</RootNamespace>
     <AssemblyName>SAM Analytical</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,203 +39,189 @@
     <ApplicationIcon>SAM.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Interop.TBD">
-      <HintPath>..\..\references_buildonly\Interop.TBD.dll</HintPath>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
     <Reference Include="SAM.Analytical">
       <HintPath>..\..\..\SAM\build\SAM.Analytical.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Analytical.Mollier">
-      <HintPath>..\..\..\SAM_Mollier\build\SAM.Analytical.Mollier.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Analytical.SolarCalculator, Version=1.0.8146.20478, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SAM_SolarCalculator\build\SAM.Analytical.SolarCalculator.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Analytical.Tas, Version=1.0.8158.27803, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SAM_Tas\build\SAM.Analytical.Tas.dll</HintPath>
     </Reference>
     <Reference Include="SAM.Analytical.Windows, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM_Windows\build\SAM.Analytical.Windows.dll</HintPath>
     </Reference>
-    <Reference Include="SAM.Architectural, Version=1.0.8131.16760, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="SAM.Core, Version=1.0.8181.22169, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SAM\build\SAM.Architectural.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Core">
       <HintPath>..\..\..\SAM\build\SAM.Core.dll</HintPath>
     </Reference>
-    <Reference Include="SAM.Core.Excel">
-      <HintPath>..\..\..\SAM_Excel\build\SAM.Core.Excel.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Core.Mollier">
-      <HintPath>..\..\..\SAM_Mollier\build\SAM.Core.Mollier.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Core.Tas">
+    <Reference Include="SAM.Core.Tas, Version=1.0.8182.19636, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\SAM_Tas\build\SAM.Core.Tas.dll</HintPath>
     </Reference>
-    <Reference Include="SAM.Core.Windows, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="SAM.Core.Windows">
       <HintPath>..\..\..\SAM_Windows\build\SAM.Core.Windows.dll</HintPath>
     </Reference>
-    <Reference Include="SAM.Geometry, Version=1.0.8129.21951, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="SAM.Geometry">
       <HintPath>..\..\..\SAM\build\SAM.Geometry.dll</HintPath>
     </Reference>
-    <Reference Include="SAM.Geometry.SolarCalculator, Version=1.0.8146.20478, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SAM_SolarCalculator\build\SAM.Geometry.SolarCalculator.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Weather, Version=1.0.8130.17143, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SAM\build\SAM.Weather.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Weather.Tas, Version=1.0.8158.27802, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SAM_Tas\build\SAM.Weather.Tas.dll</HintPath>
-    </Reference>
-    <Reference Include="SAM.Weather.Windows, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\SAM_Windows\build\SAM.Weather.Windows.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="system.windows.controls.ribbon" />
+    <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.Xml" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Deployment" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Xaml">
+      <RequiredTargetFramework>4.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="UIAutomationTypes" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    <ApplicationDefinition Include="App.xaml">
+      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </EmbeddedResource>
+    </ApplicationDefinition>
+    <Compile Include="App.xaml.cs">
+      <DependentUpon>App.xaml</DependentUpon>
+      <SubType>Code</SubType>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Properties\AssemblyInfo.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="NetOfficeFw.Excel">
-      <Version>1.9.1</Version>
+    <Resource Include="Resources\SAM.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_AddMissingObjects.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_AnalyticalModelProperties.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_ApertureConstruction.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Clean.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_ConstructionLibrary.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_EditLibrary.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_EnergySimulation.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Export.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Hydra.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Import.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_InternalCondition.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Location.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_MaterialLibrary.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_ModelCheck.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_New.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Open.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_PrintRDS.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_ProfileLibrary.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Save.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_SaveAs.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Small.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_SolarCalculator.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Space.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_T3D.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_TBD.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_TPD.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_TSD.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_WeatherData.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_Wiki.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="HelixToolkit.Wpf">
+      <Version>2.23.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.2</Version>
     </PackageReference>
-    <PackageReference Include="RibbonWinForms">
-      <Version>5.1.0-beta</Version>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\SAM_Save.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_Open.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_Export.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_MaterialLibrary.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_ConstructionLibrary.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_EditLibrary.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_T3D.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_TBD.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_TPD.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_TSD.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_Close.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_Hydra.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_Small.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_Wiki.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_SaveAs.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_InternalCondition.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_WeatherData.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_New.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_Import.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_Location.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_SolarCalculator.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_ApertureConstruction.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_ModelCheck.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\SAM_ProfileLibrary.png" />
-    <None Include="Resources\SAM_Space.png" />
-    <None Include="Resources\SAM_EnergySimulation.png" />
-    <None Include="Resources\SAM_Clean.png" />
-    <None Include="Resources\SAM_AddMissingObjects.png" />
-    <None Include="Resources\SAM_AnalyticalModelProperties.png" />
-    <None Include="Resources\SAM_PrintRDS.png" />
-    <Content Include="SAM.ico" />
-  </ItemGroup>
-  <ItemGroup>
+    <ProjectReference Include="..\..\Mollier\SAM.Core.Mollier.UI\SAM.Core.Mollier.UI.csproj">
+      <Project>{fd5079bc-621d-44ce-8eae-6e85510fe050}</Project>
+      <Name>SAM.Core.Mollier.UI</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\SAM_UI\SAM.Analytical.UI\SAM.Analytical.UI.csproj">
       <Project>{fb22aa02-a8b6-4e1a-9581-d660f6e322f8}</Project>
       <Name>SAM.Analytical.UI</Name>
@@ -241,6 +230,22 @@
       <Project>{ad13b1af-2b0b-4d82-80fa-01729d6bc73e}</Project>
       <Name>SAM.Core.UI</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\WPF\SAM.Analytical.UI.WPF\SAM.Analytical.UI.WPF.csproj">
+      <Project>{12c02306-411f-4a08-a5b4-6446f4a4e6b8}</Project>
+      <Name>SAM.Analytical.UI.WPF</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SAM.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_AirHandlingUnitDiagram.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_SpaceDiagram.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\SAM_MollierDiagram.PNG" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
