New InternalConditionWindow Implementation (WIP)

--- a/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
+++ b/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
@@ -75,6 +75,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Query\Vary.cs" />
     <Compile Include="Query\Brightness.cs" />
   </ItemGroup>
   <ItemGroup>
