InternalConditionControl Updates (WIP)

--- a/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
+++ b/WPF/SAM.Analytical.UI.WPF/SAM.Analytical.UI.WPF.csproj
@@ -167,6 +167,7 @@
       <DependentUpon>InternalConditionControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Modify\EditInternalConditions.cs" />
+    <Compile Include="Query\Colors.cs" />
     <Compile Include="Query\Texts.cs" />
     <Compile Include="Windows\InternalConditionWindow.xaml.cs">
       <DependentUpon>InternalConditionWindow.xaml</DependentUpon>
