--- a/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
+++ b/SAM_UI/SAM.Core.UI/SAM.Core.UI.csproj
@@ -50,14 +50,22 @@
   <ItemGroup>
     <Compile Include="Classes\EventArgs\ClosedEventArgs.cs" />
     <Compile Include="Classes\EventArgs\OpenedEventArgs.cs" />
+    <Compile Include="Classes\Filter\UIRelationFilter.cs" />
+    <Compile Include="Classes\Filter\UINumberFilter.cs" />
+    <Compile Include="Classes\Filter\UIParameterFilter.cs" />
+    <Compile Include="Classes\Filter\UILogicalFilter.cs" />
+    <Compile Include="Classes\Filter\UIEnumFilter.cs" />
+    <Compile Include="Classes\Filter\UITextFilter.cs" />
     <Compile Include="Classes\Legend.cs" />
     <Compile Include="Classes\LegendItem.cs" />
     <Compile Include="Classes\Modification\FullModification.cs" />
     <Compile Include="Classes\Modification\Modification.cs" />
     <Compile Include="Classes\EventArgs\ModifiedEventArgs.cs" />
+    <Compile Include="Classes\Filter\UIFilter.cs" />
     <Compile Include="Classes\UIJSAMObject.cs" />
     <Compile Include="Convert\ToDrawing\Color.cs" />
     <Compile Include="Convert\ToMedia\Color.cs" />
+    <Compile Include="Create\LogicalFilter.cs" />
     <Compile Include="Delegates\ClosedEventHandler.cs" />
     <Compile Include="Delegates\OpenedEventHandler.cs" />
     <Compile Include="Delegates\ModifiedEventHandler.cs" />
@@ -68,6 +76,7 @@
       <DependentUpon>WelcomeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Interfaces\IModification.cs" />
+    <Compile Include="Interfaces\IUIFilter.cs" />
     <Compile Include="Interfaces\IUISettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -75,6 +84,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Query\IUIFilters.cs" />
     <Compile Include="Query\Vary.cs" />
     <Compile Include="Query\Brightness.cs" />
   </ItemGroup>
