--- a/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
+++ b/SAM_UI/SAM.Analytical.UI/SAM.Analytical.UI.csproj
@@ -124,6 +124,7 @@
     </Compile>
     <Compile Include="Interfaces\IAnalyticalViewSettings.cs" />
     <Compile Include="Interfaces\ISection3DObject.cs" />
+    <Compile Include="Modify\AssignAdjacencyCluster.cs" />
     <Compile Include="Modify\RenameSpace.cs" />
     <Compile Include="Modify\RenameSpaces.cs" />
     <Compile Include="Modify\DuplicateInternalCondition.cs" />
